lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx580.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1750,
    "max_sclk": 1366,
    "max_voltage": 1150,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "mclk_levels": [
            {
              "clockspeed": 300,
              "voltage": 750
            },
            {
              "clockspeed": 1000,
              "voltage": 825
            },
            {
              "clockspeed": 1750,
              "voltage": 975
            }
          ],
          "od_range": {
            "mclk": {
              "max": 2250,
              "min": 300
            },
            "sclk": {
              "max": 2000,
              "min": 300
            },
            "vddc": {
              "max": 1200,
              "min": 750
            }
          },
          "sclk_levels": [
            {
              "clockspeed": 300,
              "voltage": 750
            },
            {
              "clockspeed": 600,
              "voltage": 769
            },
            {
              "clockspeed": 900,
              "voltage": 912
            },
            {
              "clockspeed": 1145,
              "voltage": 1125
            },
            {
              "clockspeed": 1215,
              "voltage": 1150
            },
            {
              "clockspeed": 1257,
              "voltage": 1150
            },
            {
              "clockspeed": 1300,
              "voltage": 1150
            },
            {
              "clockspeed": 1366,
              "voltage": 1150
            }
          ]
        },
        "kind": "gcn"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "vram_clock_ratio": 1.0
    },
    "flags": [
      "ConfigurableFanControl"
    ],
    "link_info": {
      "max_speed": "8.0 GT/s PCIe",
      "max_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Ellesmere [Radeon RX 470/480/570/570X/580/580X/590]",
        "model_id": "67DF",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "Radeon RX 580 Pulse 4GB",
        "model_id": "E387",
        "vendor": "Sapphire Technology Limited",
        "vendor_id": "1DA2"
      }
    },
    "vbios_version": "113-1E3871U-O4C",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Ellesmere [Radeon RX 470/480/570/570X/580/580X/590]",
      "model_id": "67DF",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "Radeon RX 580 Pulse 4GB",
      "model_id": "E387",
      "vendor": "Sapphire Technology Limited",
      "vendor_id": "1DA2"
    }
  },
  "power_profile_modes": {
    "active": 1,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": null,
            "values": [
              null,
              null,
              null,
              null,
              null,
              null
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": null,
            "values": [
              0,
              100,
              30,
              10,
              60,
              25
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": null,
            "values": [
              10,
              0,
              30,
              null,
              null,
              null
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": null,
            "values": [
              null,
              null,
              null,
              10,
              16,
              31
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": null,
            "values": [
              0,
              11,
              50,
              0,
              100,
              10
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": null,
            "values": [
              0,
              5,
              30,
              null,
              null,
              null
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": null,
            "values": [
              null,
              null,
              null,
              null,
              null,
              null
            ]
          }
        ],
        "name": "CUSTOM"
      }
    },
    "value_names": [
      "SCLK_UP_HYST",
      "SCLK_DOWN_HYST",
      "SCLK_ACTIVE_LEVEL",
      "MCLK_UP_HYST",
      "MCLK_DOWN_HYST",
      "MCLK_ACTIVE_LEVEL"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 300
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 600
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 900
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 1145
      },
      {
        "enabled": true,
        "id": {
          "Index": 4
        },
        "value": 1215
      },
      {
        "enabled": true,
        "id": {
          "Index": 5
        },
        "value": 1257
      },
      {
        "enabled": true,
        "id": {
          "Index": 6
        },
        "value": 1300
      },
      {
        "enabled": true,
        "id": {
          "Index": 7
        },
        "value": 1366
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 300
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 1000
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 1750
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": {
        "Index": 2
      },
      "memory": {
        "Index": 2
      },
      "pcie": {
        "Index": 1
      }
    },
    "busy_percent": 11,
    "clockspeed": {
      "gpu_clockspeed": 798,
      "sensors": {},
      "vram_clockspeed": 1750
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {},
      "pwm_current": 35,
      "pwm_max": 255,
      "pwm_min": 0,
      "speed_current": 595,
      "speed_max": 3200,
      "speed_min": 0
    },
    "performance_level": "auto",
    "power": {
      "average": 41.045,
      "cap_current": 155.0,
      "cap_default": 155.0,
      "cap_max": 201.0,
      "cap_min": 0.0
    },
    "temps": {
      "edge": {
        "crit": 94.0,
        "crit_hyst": -273.1499938964844,
        "current": 44.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "gpu": 975,
      "sensors": {}
    },
    "vram": {
      "total": 4294967296,
      "used": 536870912
    }
  }
}
