lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx6600.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 925,
    "max_sclk": 2700,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 925,
            "min": 97
          },
          "current_sclk_range": {
            "max": 2700,
            "min": 2600
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 950,
              "min": 674
            },
            "sclk": {
              "max": 2900,
              "min": 500
            },
            "sclk_offset": null,
            "voltage_offset": null
          },
          "sclk_offset": null,
          "vddc_curve": [],
          "voltage_offset": -100
        },
        "kind": "rdna"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "vram_clock_ratio": 1.0
    },
    "flags": [
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "16.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 23 [Radeon RX 6600/6600 XT/6600M]",
        "model_id": "73FF",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "GIGABYTE RX 6600 Eagle",
        "model_id": "2334",
        "vendor": "Gigabyte Technology Co., Ltd",
        "vendor_id": "1458"
      }
    },
    "vbios_version": "113-D534-R66E",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 23 [Radeon RX 6600/6600 XT/6600M]",
      "model_id": "73FF",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "GIGABYTE RX 6600 Eagle",
      "model_id": "2334",
      "vendor": "Gigabyte Technology Co., Ltd",
      "vendor_id": "1458"
    }
  },
  "power_profile_modes": {
    "active": 1,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              3276800,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              800,
              327680,
              -65536,
              0
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              650,
              4587520,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              655360,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              4,
              850,
              4,
              800,
              327680,
              -65536,
              0
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              1,
              0,
              3,
              0,
              5898240,
              -65536,
              0
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              3407872,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              1,
              0,
              3,
              0,
              1966080,
              -65536,
              0
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              500,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              3473408,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              500,
              1966080,
              -65536,
              0
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              4,
              1000,
              1,
              0,
              3932160,
              0,
              0
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              655360,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              800,
              327680,
              -65536,
              0
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              4,
              1000,
              1,
              0,
              3932160,
              0,
              0
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              655360,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              4,
              850,
              3,
              0,
              327680,
              -65536,
              -32768
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "SOCCLK",
            "values": [
              0,
              5,
              1,
              0,
              1,
              0,
              3276800,
              -6553,
              -6553
            ]
          },
          {
            "clock_type": "MEMCLK",
            "values": [
              0,
              5,
              1,
              0,
              4,
              800,
              327680,
              -65536,
              0
            ]
          }
        ],
        "name": "CUSTOM"
      }
    },
    "value_names": [
      "FPS",
      "MinFreqType",
      "MinActiveFreqType",
      "MinActiveFreq",
      "BoosterFreqType",
      "BoosterFreq",
      "PD_Data_limit_c",
      "PD_Data_error_coeff",
      "PD_Data_error_rate_coeff"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 500
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 2605
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 2700
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 96
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 541
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 675
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 925
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": {
        "Index": 1
      },
      "memory": {
        "Index": 0
      },
      "pcie": {
        "Index": 1
      }
    },
    "busy_percent": 0,
    "clockspeed": {
      "gpu_clockspeed": 20,
      "sensors": {},
      "vram_clockspeed": 96
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {},
      "pwm_current": 0,
      "pwm_max": 255,
      "pwm_min": 0,
      "speed_current": 1395,
      "speed_max": 3100,
      "speed_min": 0
    },
    "power": {
      "average": 3.0,
      "cap_current": 120.0,
      "cap_default": 100.0,
      "cap_max": 120.0,
      "cap_min": 94.0
    },
    "temps": {
      "edge": {
        "crit": 100.0,
        "crit_hyst": -273.1499938964844,
        "current": 28.0,
        "display_only": false,
        "primary": true
      },
      "junction": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 28.0,
        "display_only": false,
        "primary": true
      },
      "mem": {
        "crit": 100.0,
        "crit_hyst": -273.1499938964844,
        "current": 26.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "gpu": 1000,
      "sensors": {}
    },
    "vram": {}
  }
}
